src/objects/CPA_PWORF_Ageing__c.object
<CustomObject>
    <description>This object will be used for persisting the pworf ageing only with help of Apex Scheduler/Triggers.</description>
    <fields>
        <fullName>PWORF_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PWORF ID</label>
        <referenceTo>CPA_PWORF__c</referenceTo>
        <relationshipLabel>CPA PWORF Ageing</relationshipLabel>
        <relationshipName>CPA_PWORF_Ageing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dat_Latest_Update_Date__c</fullName>
        <description>this will hold the last update date &amp; Time</description>
        <label>Latest Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dat_Resubmitted_Date__c</fullName>
        <label>Resubmitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_Submitted_Date__c</fullName>
        <description>Prowf Submitted Date</description>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fml_Fianl_PWORF_Ageing__c</fullName>
        <formula>IF((ISPICKVAL(  PWORF_ID__r.pkl_Status__c  , &quot;Saved&quot;) || ISPICKVAL( PWORF_ID__r.pkl_Status__c , &quot;Cancelled&quot;)), 0,  num_Total_PWORF_Ageing_Days__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fianl PWORF Ageing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fml_Resubmitted_Date__c</fullName>
        <formula>PWORF_ID__r.dat_Resubmitted_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resubmitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fml_Status__c</fullName>
        <formula>TEXT(PWORF_ID__r.pkl_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fml_Submitted_Date__c</fullName>
        <formula>PWORF_ID__r.dat_Submitted_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>num_PWORF_Age__c</fullName>
        <description>to hold the Pworf Age till last withhold or Answer status.</description>
        <label>PWORF Age</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_Total_PWORF_Ageing_Days__c</fullName>
        <description>Final pworf days to be shown on repoort</description>
        <label>Total PWORF Ageing Days</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>txt_Status__c</fullName>
        <description>will reflect the status of pworf here</description>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CPA PWORF Ageing</label>
    <listViews>
        <fullName>CAP_VDM_Queue_CPA_PWORF_Ageing</fullName>
        <filterScope>Queue</filterScope>
        <label>VDM</label>
        <queue>CAP_VDM_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>CPA PWORF Aging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPA PWORF Ageing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>